# rentree_litteraire

./: LICENSE.txt  README.md  RL_2023.py  RL_23.ipynb  archive_dict_rl_23.pkl  dict_rl_23.pkl  dict_rl_final_20231126.pkl  dict_rl_final_23.pkl  dimension_to_clean.csv  geoloc.pkl  liste_rl_total.csv  liste_rl_total.pkl  liste_rl_total_sans_doublon.csv  liste_rl_total_sans_doublon.pkl  liste_rl_total_test.pkl  liste_rl_total_test_pour_prix_litt.pkl  nuagemot.py  page_prix_litteraire.py  page_rentree_litteraire.py  page_rentree_litteraire_genre.py  pyproject.toml  requirements.txt  word_cloud.py
docs/: dict_rl_final_20231126.pkl
pages/: ajout_par_url.py  ajout_prix_litteraire.py  analyse_de_base.py  dataframes.py  geolocalisation.py
pages/.ipynb_checkpoints/: ajout_par_url-checkpoint.py  ajout_prix_litteraire-checkpoint.py  verif-checkpoint.py
pages/pages/: ajout _infos_manquantes.py  ajout_manuel.py
pages/pages/.ipynb_checkpoints/: ajout_prix_litteraire-checkpoint.py
