[tool.poetry]
name = "poetry-rl"
version = "0.1.0"
description = ""
authors = ["Sandrine <eleonore.henry@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_rl"}]

[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.4.0"
folium = "^0.14.0"
altair = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
