[tool.poetry]
name = "poetry-rl"
version = "0.1.0"
description = "Application d'analyse et de visualisation des données de la rentrée littéraire."
authors = ["Sandrine <eleonore.henry@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_rl"}]

[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.4.0"
folium = "^0.14.0"
altair = "^5.1.2"
wordcloud = "^1.9.3"
textblob = "^0.17.1"
spacy = "^3.7.2"
pandas = "^2.3.1"
streamlit-option-menu = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"